# FFFmpeg-wrapper

./: .gitignore  Allsurvey.cpp  Allsurvey.h  BmpSurvey.cpp  BmpSurvey.h  CMakeLists.txt  DemuxerWorker.cpp  DemuxerWorker.h  Factory.cpp  Factory.h  FpsGauge.cpp  FpsGauge.h  H264Survey.cpp  H264Survey.h  InstanceName.cpp  InstanceName.h  JobPkgBase.cpp  JobPkgBase.h  MuxWorker.cpp  MuxWorker.h  SafeQueue.cpp  SafeQueue.h  Survey.cpp  Survey.h  ThreadRunner.cpp  ThreadRunner.h  YuvSurvey.cpp  YuvSurvey.h  main.cpp  readme.md
videoio/: BsfFIlter.cpp  BsfFIlter.h  Codec.cpp  Codec.h  Demux.cpp  Demux.h  FFmDecoder.cpp  FFmDecoder.h  FFmDemux.cpp  FFmDemux.h  FFmEncoder.cpp  FFmEncoder.h  FFmMux.cpp  FFmMux.h  FFmUtils.cpp  FFmUtils.h  Filter.cpp  Filter.h  GstEncoder.h  H264Mux.cpp  H264Mux.h  Mux.cpp  Mux.h  SwscaleFilter.cpp  SwscaleFilter.h  Types.h  Utils.cpp  Utils.h  YuvDemux.cpp  YuvDemux.h  YuvMux.cpp  YuvMux.h
xlog/: xfilemanage.cpp  xfilemanage.h  xlog.cpp  xlog.h  xlogmanager.cpp  xlogmanager.h  xlogutility.cpp  xlogutility.h  xmylog.cpp  xmylog.h  xreallog.cpp  xreallog.h
